<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/invoices_nav_item"
            android:icon="@drawable/ic_currency"
            android:title="@string/orders_nav_item" />
        <item
            android:id="@+id/products_nav_item"
            android:icon="@drawable/ic_basket"
            android:title="@string/products_nav_item" />
        <item
            android:id="@+id/customers_nav_item"
            android:icon="@drawable/ic_account"
            android:title="@string/customers_nav_item" />

    </group>

    <group
        android:id="@+id/drawer_group_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings_nav_item"
            android:icon="@android:color/transparent"
            android:title="@string/settings_nav_item" />
        <item
            android:id="@+id/log_out_nav_item"
            android:icon="@android:color/transparent"
            android:title="@string/log_out_nav_item" />
    </group>
</menu>