<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/subtotal_value"
        android:layout_width="0dp"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:gravity="center_vertical|end"
        android:paddingEnd="@dimen/keyline_1"
        android:paddingRight="@dimen/keyline_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="$230" />

    <TextView
        android:id="@+id/tax_value"
        android:layout_width="0dp"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:gravity="center_vertical|end"
        android:paddingEnd="@dimen/keyline_1"
        android:paddingRight="@dimen/keyline_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/total_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintTop_toBottomOf="@id/subtotal_value"
        tools:text="$30" />

    <TextView
        android:id="@+id/total_value"
        android:layout_width="0dp"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical|end"
        android:paddingEnd="@dimen/keyline_1"
        android:paddingRight="@dimen/keyline_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tax_value"
        tools:text="$200" />

    <TextView
        android:id="@+id/subtotal_label"
        android:layout_width="0dp"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/keyline_1"
        android:paddingStart="@dimen/keyline_1"
        android:text="@string/subtotal_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/tax_label"
        app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider1"
        style="@style/Divider"
        android:layout_marginTop="?attr/listPreferredItemHeightSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tax_label"
        android:layout_width="0dp"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/keyline_1"
        android:paddingStart="@dimen/keyline_1"
        android:text="@string/tax_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/total_label"
        app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtotal_label" />

    <TextView
        android:id="@+id/total_label"
        android:layout_width="0dp"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/keyline_1"
        android:paddingStart="@dimen/keyline_1"
        android:text="@string/total_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tax_label" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

</androidx.constraintlayout.widget.ConstraintLayout>